# trading-system

./: .gitignore  CMakeLists.txt  README.md  diagram.mmd
scripts/: run.sh
src/: logger.cpp  logger.hpp  main.cpp  market_data.cpp  market_data.hpp  order_book.cpp  order_book.hpp  simulator.cpp  simulator.hpp  strategy.cpp  strategy.hpp
